# universal-realtime-stt

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  benchmark.py  config.py  pyproject.toml  pytest.ini  requirements.txt
assets/: assets_sources.md  test1.txt
doc/: analysis_of_speechmatics.md  google_sample_output.txt  llm_understanding_metric.md  report.md  sample_speechmatics_output.txt  semantic_understanding_metric.md  speechmatics_claude.txt
helpers/: collect_reports.py  diff.py  diff_report.py  llm_api.py  llm_understanding.py  semantic_understanding.py  stream_wav.py  transcribe.py  transcript_ingest.py
lib/: assets.py  diff.py  diff_report.py  helper_diff.py  helper_stream_wav.py  stt.py  stt_provider.py  stt_provider_cartesia.py  stt_provider_deepgram.py  stt_provider_elevenlabs.py  stt_provider_google.py  stt_provider_speechmatics.py  utils.py  wav_stream.py
tests/: test_diff.py  test_stt.py  test_stt_assets.py
