[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "unicersal-realtime-stt"
version = "0.1.0"
description = "Provider-agnostic realtime speech-to-text library with unified async interface"
authors = [
  { name="Tomáš Kubeš" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "websockets>=12",
  "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/mr-napik/universal-realtime-stt"
