[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-realtime-stt"
version = "0.1.0"
description = "Multiprovider realtime speech-to-text library with unified async interface"
authors = [
  { name = "Tomáš Kubeš" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["speech-to-text", "stt", "realtime", "websocket", "asr", "transcription"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Framework :: AsyncIO",
  "Typing :: Typed",
]
dependencies = [
  "websockets>=16.0.0",
  "google-cloud-speech>=2.36.0",
  "diff-match-patch>=20241021",
  "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
# Semantic understanding metric (LLM-based SER via Gemini)
semantic = ["google-genai>=1.64.0"]
# Development / testing
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/mr-napik/universal-realtime-stt"
"Bug Tracker" = "https://github.com/mr-napik/universal-realtime-stt/issues"
